--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,26 +8,44 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title> layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">"SCOA"</title>
 </head>
-<div class="col-12">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+<nav class="navbar navbar-expand-lg bg-primary-subtle">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">SCOA - Sistema de Controle Acadêmico</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Cadastrar
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Aluno</a></li>
+                        <li><a class="dropdown-item" href="#">Professor</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Turma</a></li>
+                        <li><a class="dropdown-item" href="#">Disciplina</a></li>
+                        <li><a class="dropdown-item" href="#">Sala</a></li>
+                    </ul>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Another Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Another Link</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Consultar
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Aluno</a></li>
+                        <li><a class="dropdown-item" href="#">Professor</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Turma</a></li>
+                        <li><a class="dropdown-item" href="#">Disciplina</a></li>
+                        <li><a class="dropdown-item" href="#">Sala</a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
-    </nav>
-</div>
+    </div>
+</nav>
 <body layout:fragment="body">
 </body>
 </html>
