--- a/src/main/resources/templates/alunos-edit.html
+++ b/src/main/resources/templates/alunos-edit.html
@@ -48,7 +48,7 @@
                 <div class="form-group col-md-6">
                     <label for="inputDataNascimento" class="form-label">Data de Nascimento</label>
                     <input
-                            type="text"
+                            type="datetime-local"
                             th:field="*{data_nascimento}"
                             class="form-control"
                             placeholder="yyyy-mm-dd"
