--- a/src/main/resources/templates/turmas-list.html
+++ b/src/main/resources/templates/turmas-list.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>Listar Aluno</title>
+    <title>Listar Turma</title>
 </head>
 
 <!-- Page Content-->
